--- a/pyanaconda/ui/gui/spokes/storage.ui
+++ b/pyanaconda/ui/gui/spokes/storage.ui
@@ -738,7 +738,7 @@
                         <property name="can_focus">True</property>
                         <property name="model">disk_store</property>
                         <child internal-child="selection">
-                          <object class="GtkTreeSelection" id="treeview-selection1"/>
+                          <object class="GtkTreeSelection" id="disk_selection"/>
                         </child>
                         <child>
                           <object class="GtkTreeViewColumn" id="description_column">
@@ -879,7 +879,7 @@
           <object class="GtkAlignment" id="AnacondaSpokeWindow-alignment1">
             <property name="can_focus">False</property>
             <property name="yalign">0</property>
-            <property name="xscale">0.9</property>
+            <property name="xscale">0.89999997615814209</property>
             <property name="yscale">0.5</property>
             <child internal-child="action_area">
               <object class="GtkBox" id="storageWindow-action_area1">
