--- a/pyanaconda/ui/gui/spokes/welcome.ui
+++ b/pyanaconda/ui/gui/spokes/welcome.ui
@@ -242,7 +242,7 @@ OS you can rely on.  It's for testing purposes only.</property>
                         <property name="headers_visible">False</property>
                         <property name="search_column">0</property>
                         <child internal-child="selection">
-                          <object class="GtkTreeSelection" id="treeview-selection">
+                          <object class="GtkTreeSelection" id="languageViewSelection">
                             <signal name="changed" handler="on_selection_changed" swapped="no"/>
                           </object>
                         </child>
