--- a/pyanaconda/ui/gui/spokes/keyboard.ui
+++ b/pyanaconda/ui/gui/spokes/keyboard.ui
@@ -10,6 +10,7 @@
   <object class="GtkDialog" id="addLayoutDialog">
     <property name="can_focus">False</property>
     <property name="border_width">5</property>
+    <property name="default_height">450</property>
     <property name="type_hint">dialog</property>
     <child internal-child="vbox">
       <object class="GtkBox" id="dialog-vbox1">
@@ -99,12 +100,15 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="vexpand">True</property>
+                <property name="hscrollbar_policy">never</property>
                 <property name="shadow_type">in</property>
                 <child>
                   <object class="GtkTreeView" id="newLayoutView">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="model">newLayoutStoreFilter</property>
+                    <property name="headers_visible">False</property>
+                    <property name="headers_clickable">False</property>
                     <child internal-child="selection">
                       <object class="GtkTreeSelection" id="newLayoutSelection"/>
                     </child>
@@ -112,7 +116,6 @@
                       <object class="GtkTreeViewColumn" id="name">
                         <property name="title" translatable="yes">Name</property>
                         <property name="expand">True</property>
-                        <property name="clickable">True</property>
                         <property name="sort_column_id">0</property>
                         <child>
                           <object class="GtkCellRendererText" id="newLayoutRenderer"/>
