Set sensitivity for the preview button (KeyboardSpoke) when something is selected

--- a/pyanaconda/ui/gui/spokes/keyboard.ui
+++ b/pyanaconda/ui/gui/spokes/keyboard.ui
@@ -343,7 +343,7 @@ any layout to the top of the list to select it as the default.</property>
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkButton" id="settingsButton">
+                              <object class="GtkButton" id="previewButton">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
