--- a/pyanaconda/ui/gui/spokes/welcome.ui
+++ b/pyanaconda/ui/gui/spokes/welcome.ui
@@ -182,7 +182,7 @@ OS you can rely on.  It's for testing purposes only.</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="ypad">6</property>
-                    <property name="label" translatable="yes">WELCOME TO FEDORA 17.</property>
+                    <property name="label" translatable="yes">WELCOME TO %s %s.</property>
                     <attributes>
                       <attribute name="font-desc" value="Sans 26"/>
                     </attributes>
