Don't decorate storage-related popup windows.

--- a/pyanaconda/ui/gui/spokes/storage.ui
+++ b/pyanaconda/ui/gui/spokes/storage.ui
@@ -23,6 +23,7 @@
     <property name="window_position">center-on-parent</property>
     <property name="destroy_with_parent">True</property>
     <property name="type_hint">dialog</property>
+    <property name="decorated">False</property>
     <property name="mnemonics_visible">False</property>
     <child internal-child="vbox">
       <object class="GtkBox" id="dialog-vbox2">
@@ -158,6 +159,7 @@
     <property name="window_position">center-on-parent</property>
     <property name="destroy_with_parent">True</property>
     <property name="type_hint">dialog</property>
+    <property name="decorated">False</property>
     <property name="mnemonics_visible">False</property>
     <child internal-child="vbox">
       <object class="GtkBox" id="dialog-vbox5">
@@ -420,6 +422,7 @@
     <property name="window_position">center-on-parent</property>
     <property name="destroy_with_parent">True</property>
     <property name="type_hint">dialog</property>
+    <property name="decorated">False</property>
     <property name="mnemonics_visible">False</property>
     <child internal-child="vbox">
       <object class="GtkBox" id="dialog-vbox7">
@@ -664,6 +667,7 @@
     <property name="window_position">center-on-parent</property>
     <property name="destroy_with_parent">True</property>
     <property name="type_hint">dialog</property>
+    <property name="decorated">False</property>
     <property name="mnemonics_visible">False</property>
     <child internal-child="vbox">
       <object class="GtkBox" id="dialog-vbox1">
