Network spoke: Use another mnemonic for Configure button
Conflicted with Continue. I chose letter close to the first one,
but perhaps consonant or g is better?

--- a/pyanaconda/ui/gui/spokes/network.ui
+++ b/pyanaconda/ui/gui/spokes/network.ui
@@ -547,7 +547,7 @@ updates available for you</property>
                                         <property name="vexpand">True</property>
                                         <child>
                                           <object class="GtkButton" id="button_wired_options">
-                                            <property name="label" translatable="yes">_Configure...</property>
+                                            <property name="label" translatable="yes">C_onfigure...</property>
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="receives_default">True</property>
