Grammar fix on the network spoke.

--- a/pyanaconda/ui/gui/spokes/network.ui
+++ b/pyanaconda/ui/gui/spokes/network.ui
@@ -75,7 +75,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">We'll need network access to fetch information about your location and to make software
-updates available for you</property>
+updates available for you.</property>
                     <attributes>
                       <attribute name="font-desc" value="Sans 14"/>
                     </attributes>
