Don't decorate the keyboard add layout dialog.

--- a/pyanaconda/ui/gui/spokes/keyboard.ui
+++ b/pyanaconda/ui/gui/spokes/keyboard.ui
@@ -9,6 +9,7 @@
   </object>
   <object class="GtkDialog" id="addLayoutDialog">
     <property name="can_focus">False</property>
+    <property name="decorated">False</property>
     <property name="border_width">5</property>
     <property name="default_height">450</property>
     <property name="type_hint">dialog</property>
