--- a/pyanaconda/ui/gui/spokes/source.ui
+++ b/pyanaconda/ui/gui/spokes/source.ui
@@ -106,15 +106,16 @@
             <property name="can_focus">False</property>
             <property name="layout_style">end</property>
             <child>
-              <object class="GtkButton" id="cancelButton">
-                <property name="label" translatable="yes">_CANCEL</property>
+              <object class="GtkButton" id="doneButton">
+                <property name="label" translatable="yes">_DONE</property>
                 <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
+                <property name="sensitive">False</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_action_appearance">False</property>
                 <property name="use_underline">True</property>
-                <signal name="clicked" handler="on_cancel_clicked" swapped="no"/>
+                <signal name="clicked" handler="on_done_clicked" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -165,7 +166,7 @@
                     <property name="orientation">vertical</property>
                     <property name="spacing">6</property>
                     <child>
-                      <object class="GtkLabel" id="label5">
+                      <object class="GtkLabel" id="verifyLabel">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="label" translatable="yes">Verifying media, please wait...</property>
@@ -207,7 +208,7 @@
       </object>
     </child>
     <action-widgets>
-      <action-widget response="0">cancelButton</action-widget>
+      <action-widget response="0">doneButton</action-widget>
     </action-widgets>
   </object>
   <object class="GtkListStore" id="partitionStore">
