--- a/pyanaconda/ui/gui/spokes/software.ui
+++ b/pyanaconda/ui/gui/spokes/software.ui
@@ -57,7 +57,7 @@
                   <object class="GtkBox" id="box1">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="spacing">6</property>
+                    <property name="spacing">24</property>
                     <property name="homogeneous">True</property>
                     <child>
                       <object class="GtkBox" id="desktopBox">
@@ -96,18 +96,27 @@
                                   <object class="GtkTreeView" id="desktopView">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
+                                    <property name="margin_left">6</property>
+                                    <property name="margin_right">6</property>
+                                    <property name="margin_top">6</property>
+                                    <property name="margin_bottom">6</property>
                                     <property name="model">desktopStore</property>
                                     <property name="headers_visible">False</property>
                                     <property name="headers_clickable">False</property>
                                     <property name="search_column">0</property>
                                     <child internal-child="selection">
-                                      <object class="GtkTreeSelection" id="treeview-selection1"/>
+                                      <object class="GtkTreeSelection" id="desktopSelector"/>
                                     </child>
                                     <child>
                                       <object class="GtkTreeViewColumn" id="desktopDescCol">
                                         <property name="title" translatable="yes">column</property>
                                         <child>
-                                          <object class="GtkCellRendererText" id="desktopDescRenderer"/>
+                                          <object class="GtkCellRendererText" id="desktopDescRenderer">
+                                            <property name="width">250</property>
+                                            <property name="yalign">0</property>
+                                            <property name="wrap_mode">word-char</property>
+                                            <property name="wrap_width">200</property>
+                                          </object>
                                           <attributes>
                                             <attribute name="markup">1</attribute>
                                           </attributes>
@@ -168,6 +177,10 @@
                                   <object class="GtkTreeView" id="addonView">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
+                                    <property name="margin_left">6</property>
+                                    <property name="margin_right">6</property>
+                                    <property name="margin_top">6</property>
+                                    <property name="margin_bottom">6</property>
                                     <property name="model">addonStore</property>
                                     <property name="headers_visible">False</property>
                                     <property name="headers_clickable">False</property>
@@ -194,7 +207,12 @@
                                       <object class="GtkTreeViewColumn" id="addonDescCol">
                                         <property name="title" translatable="yes">column</property>
                                         <child>
-                                          <object class="GtkCellRendererText" id="addonDescRenderer"/>
+                                          <object class="GtkCellRendererText" id="addonDescRenderer">
+                                            <property name="width">250</property>
+                                            <property name="yalign">0</property>
+                                            <property name="wrap_mode">word-char</property>
+                                            <property name="wrap_width">200</property>
+                                          </object>
                                           <attributes>
                                             <attribute name="markup">1</attribute>
                                           </attributes>
