--- a/pyanaconda/ui/gui/spokes/source.ui
+++ b/pyanaconda/ui/gui/spokes/source.ui
@@ -484,6 +484,7 @@
                             <property name="can_focus">False</property>
                             <property name="active">0</property>
                             <items>
+                              <item translatable="yes">Closest mirror</item>
                               <item translatable="yes">http://</item>
                               <item translatable="yes">https://</item>
                               <item translatable="yes">ftp://</item>
